<resources>
    <string name="app_name">IIR-AI-Hospital</string>
    <string name="user_name">姓名</string>
    <string name="user_id">身份證</string>
    <string name="user_birth">生日</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="language">語言</string>
    <string name="signature">簽名</string>
    <string name="clear_signature">清空</string>
    <string name="empty">所有欄位皆不可為空</string>
    <string name="signature_empty">請簽上您的大名</string>
    <string name="tel_home">市話</string>
    <string name="tel_mobile">手機</string>
    <string name="address">地址</string>
    <string name="tv_pateint_id">病人身分證字號</string>
    <string name="tv_select_pateint_profile">選擇正確的病患資訊</string>
    <string name="patient_fill">病人填寫表</string>
    <string name="tv_self_management">自主管理衛教單</string>
    <string name="tv_medical_staff_self_management">護理人員\n自主管理衛教單</string>
    <string name="patient_rule">
        <li>一、 維持手部清潔，保持經常洗手習慣，原則上可以使用肥皂和清水或酒精
            性乾洗手液進行手部清潔。另應注意儘量不要用手直接碰觸眼睛、鼻子
            和嘴巴。手部接觸到呼吸道分泌物時，請用肥皂及清水搓手及澈底洗淨。\n</li>
        <li>二、 於自主健康管理期間，每日早/晚各量體溫一次、詳實記錄體溫、健康
            狀況及活動史。\n</li>
        <li>三、 如沒有出現任何症狀，可正常生活，但應儘量避免出入公共場所，延後
            非急迫之醫療或檢查，外出時，請一定嚴格遵守全程佩戴醫用口罩。\n</li>
        <li>四、 倘您有發燒( ≥ 38˚C)或有呼吸道症狀，請立即佩戴醫用口罩，儘速就
            醫，且禁止搭乘大眾運輸工具就醫。就醫時應主動告知醫師接觸史旅遊
            史、居住史、職業暴露、以及身邊是否有其他人有類似的症狀。\n</li>
        <li>五、 生病期間應於家中休養，並佩戴醫用口罩、避免外出。當口罩沾到口鼻
            分泌物時，應立即更換並內摺丟進垃圾桶。\n</li>
        <li>六、 生病期間，與他人交談時，除戴上醫用口罩外，儘可能保持 1 公尺以上
            距離。\n</li>
        <li>七、 如您就醫後，經醫院安排採檢，自採檢醫院返家後，於接獲通知檢驗結
            果前，應留在家中，不可外出，另於獲知檢驗結果為陰性後，仍需自主
            健康管理滿 14 天，期間如果症狀加劇，請確實佩戴好醫用口罩，並應
            主動與衛生單位聯繫，或撥 1922，依指示儘速就醫，且禁止搭乘大眾
            運輸工具就醫。\n</li>
        <li>八、 如未確實遵守各項自主健康管理規定，係違反「傳染病防治法」第 48
            條或第 58 條，將依同法第 67 條或第 69 條處新臺幣 1 萬至 30 萬元不等
            罰鍰。</li>
    </string>
    <string name="rule_confirm">同意書</string>
    <string name="meidcal_staff_rule">
        <li>一、自採檢院所返家後，於接獲通知檢驗結果前，應留在家中，不可外出，
            另於距離第1 次採檢至少24 小時後，返回原採檢院所進行第2 次採檢。\n</li>
        <li>二、於第1 次採檢後需暫停上班，直到退燒超過24 小時（未使用退燒藥），
            且呼吸道症狀緩解，且至少連續2 次（採檢間隔至少24 小時）鼻咽或
            咽喉擦拭液檢體檢驗陰性，始能恢復上班。\n</li>
        <li>三、生病期間應於家中休養，並佩戴醫用口罩、避免外出，且與他人儘可能
            保持1 公尺以上距離。當口罩沾到口鼻分泌物時，應立即更換並內摺丟
            進垃圾桶。\n</li>
        <li>四、期間如果症狀加劇，請確實佩戴好醫用口罩，並應主動與衛生單位聯
            繫，或撥1922，依指示儘速就醫，且禁止搭乘大眾運輸工具就醫。\n</li>
        <li>五、於自主健康管理期間，每日早/晚各量體溫一次、詳實記錄體溫、健康
            狀況及活動史。儘量避免出入公共場所，延後非急迫之醫療或檢查，外
            出時，請一定嚴格遵守全程佩戴醫用口罩。\n</li>
        <li>六、維持手部清潔，保持經常洗手習慣，原則上可以使用肥皂和清水或酒精
            性乾洗手液進行手部清潔。另應注意儘量不要用手直接碰觸眼睛、鼻子
            和嘴巴。手部接觸到呼吸道分泌物時，請用肥皂及清水搓手及澈底洗淨。\n</li>
        <li>七、如未確實遵守各項自主健康管理規定，係違反「傳染病防治法」第48
            條，將依同法第67 條處新臺幣6 萬元至30 萬不等罰鍰。\n</li>
    </string>
</resources>
