<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <ImageButton
        android:id="@+id/imgBtn_back"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guideline22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/exit" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="#4B4B4B"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_id"
        app:layout_constraintEnd_toStartOf="@+id/et_userName"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toTopOf="@+id/guideline22" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textColor="#4B4B4B"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_address"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textColor="#4B4B4B"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_tel_home"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <TextView
        android:id="@+id/tv_tel_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_home"
        android:textColor="#4B4B4B"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_mobile"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/tv_address" />

    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_mobile"
        android:textColor="#4B4B4B"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline24"
        app:layout_constraintTop_toBottomOf="@+id/tv_tel_home" />

    <EditText
        android:id="@+id/et_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name" />

    <EditText
        android:id="@+id/et_userId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_id"
        app:layout_constraintStart_toEndOf="@+id/tv_id"
        app:layout_constraintTop_toTopOf="@+id/tv_id" />

    <EditText
        android:id="@+id/et_userAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="18"
        android:inputType="textPersonName"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_address"
        app:layout_constraintStart_toEndOf="@+id/tv_address"
        app:layout_constraintTop_toTopOf="@+id/tv_address" />

    <EditText
        android:id="@+id/et_userTelHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_tel_home"
        app:layout_constraintStart_toEndOf="@+id/tv_tel_home"
        app:layout_constraintTop_toTopOf="@+id/tv_tel_home" />

    <EditText
        android:id="@+id/et_userTelMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_mobile"
        app:layout_constraintStart_toEndOf="@+id/tv_mobile"
        app:layout_constraintTop_toTopOf="@+id/tv_mobile" />

    <ImageButton
        android:id="@+id/imgBtn_sendProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline23"
        app:layout_constraintTop_toTopOf="@+id/guideline22"
        app:srcCompat="@drawable/next" />

</androidx.constraintlayout.widget.ConstraintLayout>