<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_patient_fill"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/menu_button_layout"
        android:text="@string/patient_fill"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_self_management"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_self_management"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/menu_button_layout"
        android:text="@string/tv_self_management"
        android:textSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_medicalstaff_self_management"
        app:layout_constraintStart_toEndOf="@+id/btn_patient_fill"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

<!--    <Spinner-->
<!--        android:id="@+id/spinner_language"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/guideline28"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:text="@string/language"-->
<!--        android:textSize="30dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/spinner_language"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <Button
        android:id="@+id/btn_medicalstaff_self_management"
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/menu_button_layout"
        android:text="@string/tv_medical_staff_self_management"
        android:textSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_self_management"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp"/>

    <ImageButton
        android:id="@+id/imgBtn_back"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/guideline27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_white_black" />
</androidx.constraintlayout.widget.ConstraintLayout>