<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_userBirth" />

    <TextView
        android:id="@+id/tv_userBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_birth"
        android:textSize="80dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_userID"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="80dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_userBirth"
        app:layout_constraintEnd_toStartOf="@+id/tv_login_name"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <ImageButton
        android:id="@+id/imgBtn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/tv_login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="aaaaaa"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userName"
        app:layout_constraintStart_toEndOf="@+id/tv_userName"
        app:layout_constraintTop_toTopOf="@+id/tv_userName" />

    <TextView
        android:id="@+id/tv_login_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="a12345678"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userID"
        app:layout_constraintStart_toEndOf="@+id/tv_userID"
        app:layout_constraintTop_toTopOf="@+id/tv_userID" />

    <TextView
        android:id="@+id/tv_login_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="1996-11-30"
        android:textSize="80dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_userBirth"
        app:layout_constraintStart_toEndOf="@+id/tv_userBirth"
        app:layout_constraintTop_toTopOf="@+id/tv_userBirth" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <ImageButton
        android:id="@+id/imgBtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline34"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <!--    <Spinner-->
<!--        android:id="@+id/spinner_language"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/guideline2"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginEnd="20dp"-->
<!--        android:text="@string/language"-->
<!--        android:textSize="30dp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/spinner_language"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/spinner_language"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>